@@ -1,5 +1,6 @@
 2007-01-13  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
 
+	* src/optionParse.py (optionParse.optParse): comment out many options
 	* src/procManager.py : new file
 
 2007-01-11  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
